# range_search

./: Cargo.toml  LICENSE.md  README.md
src/: automata.rs  lib.rs
