[package]
name = "range_search"
description = "An automaton that queries a finite state transducer for nearest neighbors."
version = "0.1.0"
edition = "2024"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com>"]
readme = "README.md"

[dependencies]
fst = "0.4.7"

[dev-dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
rand = "0.9.2"
